# SpringStructure

./: BouncyBall.cpp  BouncyBall.h  CMakeLists.txt  SpringStructure.cpp  SpringStructure.h  colors.cpp  colors.h  functions.cpp  functions.h  old_main.cpp  opengl_stuff.cpp  opengl_stuff.h  spring_structure_main.cpp
matlab/: conn_lattice.txt  create_ball_chain_main.m  create_ball_main.m  create_connectivity_file.m  create_doughnut_main.m  create_edge_connectivity.m  create_lattice_main.m  create_position_file.m  create_random_structure_main.m  create_snake_main.m  create_square_block_main.m  create_wheel_main.m  d2.mat  d3.mat  pos_lattice.txt  pos_sphere_162.txt  randstr.mat  verify_ecg_uniqueness_main.m
